# hafezjoo

./: .gitignore  README.md  agent.py  index.py  pyproject.toml  settings.py  sqlite_helper.py  todo.md
.cursor/rules/: logging_style.mdc
tools/: __init__.py  file_reader.py  registry.py  semantic_search.py
