[project]
name = "llm-agent"
version = "0.1.0"
description = "A simple AI agent framework that incrementally adds functionalities to interact with LLMs and external tools."
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=0.27.0",
    "python-dotenv>=1.1.0",
    "ruff",
    "sqlite-vec>=0.1.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 110
lint.select = ["E", "F", "T", "W", "C4", "B0", "B905", "I", "TID251", "ICN002", "N805"]
lint.ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line lengths are recommended to be no greater than 79 characters.
    "E722", # Do not use bare except, specify exception instead
    "E731", # Do not assign a `lambda` expression, use a `def`
    "B008", # Do not perform function call in argument defaults
    "B026", # Star-arg unpacking after a keyword argument is strongly discouraged
    "T201", # print
]
exclude = [
    ".git",
    ".venv",
    "data",
    "venv",
    ".env",
    ".history",
    ".vscode",
    ".idea",
    ".local",
    "search/query_results_sorting/sorting.py",
    "*/migrations/*",
    "*.ipynb"
]
